Fixed overflow issues and removed long hello words

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   text-align: left;
   margin: 0;
   padding: 0;
-  max-width: 100%;
+  width: 100%;
   overflow-x: hidden;
 }
 
@@ -27,7 +27,6 @@ a {
 
 #nav-container {
   font-family: "Fjalla One", sans-serif;
-  /* font-family: 'Libre Baskerville', serif; */
   display: flex;
   list-style: none;
   padding: 0 5% 0 5%;
@@ -60,7 +59,7 @@ a {
   font-size: 6rem;
   letter-spacing: 2px;
   margin: 0;
-  width: 130%;
+  width: 100%;
   font-weight: 400;
 }
 
@@ -150,8 +149,9 @@ button {
   grid-gap: 5rem;
   padding: 0 5% 0 5%;
   row-gap: 3rem;
-  justify-items: center;
-  align-items: center;
+  justify-items: space-between;
+  align-items: space-between;
+
 }
 
 .exp-item {
@@ -160,6 +160,7 @@ button {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-right: 15%;
   font-size: 4rem;
 }
 
@@ -295,7 +296,7 @@ footer ul{
 }
 
 @media screen and (max-width: 768px) {
-  .image {
+  .image, .circle, .abstract-icon, .abstract-icon-2 {
     display: none;
   }
   #contact-container {
